visual.css
.Visual-absolute {
  position: absolute;
  top: 0;
  left: 0;
}

.Visual-no-select {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

.Visual-metrics {
  position: fixed;
  top: -10000px;
  left: -10000px;
  white-space: pre;
  padding: 0;
  pointer-events: none;
  visibility: hidden;
}

/* Workspace */

.Visual-workspace {
  background: #ddd;
  cursor: default;
  overflow: auto;
}

body.Visual-workspace {
  height: 100%;
  margin: 0;
}

.Visual-feedback {
  position: fixed;
  z-index: 10000;
  pointer-events: none;
}

/* Script */

.Visual-script {
  white-space: nowrap;
  pointer-events: none;
}

.Visual-script-dragging {
  position: fixed;
  z-index: 10001;
}

/* Arg */

.Visual-color-field {
  opacity: 0;
  pointer-events: auto;
}

.Visual-script-dragging .Visual-color-field {
  pointer-events: none;
}

.Visual-field {
  color: #555;
  font: 400 11px/12px Helvetica Neue, Helvetica, Arial, sans-serif;
  margin: 0;
  padding: 0;
  border: 0;
  background: 0;
  outline: 0;
}
.Visual-field:focus {
  pointer-events: auto;
}

.Visual-text-field,
.Visual-enum-field {
  padding: 0 0 0 4px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.Visual-enum-field {
  color: #fff;
}

/* Label */

.Visual-label {
  font: 600 11px/13px Helvetica Neue, Helvetica, Arial, sans-serif;
  letter-spacing: .02em;
  color: #fff;
}

/* Menu */

.Visual-menu {
  position: fixed;
  top: 0;
  left: 0;
  cursor: default;
  background: rgba(255, 255, 255, .95);
  border-radius: 3px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .3), 0 3px 8px rgba(0, 0, 0, .3);
  padding: 3px 0;
  z-index: 10002;
}

.Visual-menu-line {
  margin: 3px 0;
  height: 1px;
  background: rgba(0, 0, 0, .2);
}

.Visual-menu-item {
  padding: 2px 8px;
  font: 12px Helvetica Neue, Helvetica, Arial, sans-serif;
}

.Visual-menu-item:hover {
  background: rgba(0, 0, 0, .8);
  color: #fff;
}

